# speech-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: deps.py  errors.py  router.py
app/api/routes/: service.py  synthesize.py  voices.py
app/api/v1/: router.py
app/config/: settings.py
app/core/: circuit_breaker.py  concurrency.py  daily_limit.py  registry.py  synthesizer.py  voice_catalog.py
app/domain/: enums.py
app/drivers/: ffmpeg.py
app/logging/: config.py
app/providers/: base.py  elevenlabs.py  fake.py  pocket_tts.py  voice_loading.py
app/schemas/: audio.py  service.py  utterance.py  voice.py
app/static/: demo.html
docs/: API.md  configuration.md  deployment.md  development.md  voices.md
docs/providers/: elevenlabs.md  pocket.md
nginx/: nginx.conf
nginx/snippets/: proxy-headers.conf  proxy-pass.conf
nginx/templates/: 00-hardening.conf.template  20-speech-server.conf.template
scripts/: configure.sh  entrypoint.sh  fetch_elevenlabs_voices.py  pocket_plan.py  prune_weights.py
tests/: conftest.py  test_circuit_breaker.py  test_daily_limit.py  test_demo.py  test_elevenlabs.py  test_errors.py  test_formats.py  test_health.py  test_language_filter.py  test_service.py  test_settings.py  test_synthesize.py  test_voice_loading.py  test_voices.py
tests/contract/: test_provider_contract.py
tests/helpers/: audio.py  fake_provider.py
tests/integration/: test_pocket_tts.py
(+5 files in other folders)
